<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/cbYO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ylioppilastutkinto"
        app:layout_constraintStart_toStartOf="@+id/ddImage"
        app:layout_constraintTop_toBottomOf="@+id/ddImage" />

    <CheckBox
        android:id="@+id/cbKT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kandidaatin tutkinto"
        app:layout_constraintStart_toStartOf="@+id/cbYO"
        app:layout_constraintTop_toBottomOf="@+id/cbYO" />

    <CheckBox
        android:id="@+id/cbMT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maisterin tutkinto"
        app:layout_constraintStart_toStartOf="@+id/cbKT"
        app:layout_constraintTop_toBottomOf="@+id/cbKT" />

    <CheckBox
        android:id="@+id/cbTT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tohtorin tutkinto"
        app:layout_constraintStart_toStartOf="@+id/cbMT"
        app:layout_constraintTop_toBottomOf="@+id/cbMT" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="189dp"
        android:layout_height="242dp"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/buttonIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:text="@string/tietotekniikka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <RadioButton
            android:id="@+id/buttonTt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tuotantotalous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonIT"
            app:layout_constraintTop_toBottomOf="@+id/buttonIT" />

        <RadioButton
            android:id="@+id/buttonLt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/laskennallinen_tekniikka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonTt"
            app:layout_constraintTop_toBottomOf="@+id/buttonTt" />

        <RadioButton
            android:id="@+id/buttonSt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="48dp"
            android:paddingBottom="1dp"
            android:text="@string/s_hk_tekniikka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonLt"
            app:layout_constraintTop_toBottomOf="@+id/buttonLt" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="258dp"
        android:layout_height="98dp"
        android:onClick="addUser"
        android:text="@string/lis_k_ytt_j"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/ddImage"
        android:layout_width="179dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sukunimi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstname"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstname"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstname"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="347dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/s_hk_postiosoite"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@+id/editTextLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <Button
        android:id="@+id/buttonShowUsers"
        android:layout_width="210dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:onClick="switchToShowUsers"
        android:text="@string/n_yt_k_ytt_j_t"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextFirstname"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/etunimi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>